--- a/src/style.css
+++ b/src/style.css
@@ -59,12 +59,15 @@ button:focus-visible {
 }
 
 #app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  /* max-width: 1280px; */
+  /* margin: 0 auto; */
+  /* padding: 2rem; */
   text-align: center;
 }
-
+.dark-mode {
+  background-color: #121212;
+  color: #e0e0e0;
+}
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
